--- a/doc/TODO
+++ b/doc/TODO
@@ -9,3 +9,5 @@ graphcan
 
 * Add support for the standard PHEV messages, as described by 
   http://hybrids-plus.com/pmwiki/index.php?n=Ext.PHEVStandards
+
+* Convert images to XPM format. 
